--- a/charts/xwiki/templates/xwiki.yaml
+++ b/charts/xwiki/templates/xwiki.yaml
@@ -46,30 +46,30 @@ spec:
             mkdir -p /usr/local/share/ca-certificates/custom && \
             echo "Downloading root CA..." && \
             curl -fsSL 'http://pki.sunot.io/ejbca/publicweb/certificates/search.cgi?sHash=2hl0or%2B5jLH35/re3dA9NHS3h80' \
-              -o /usr/local/share/ca-certificates/custom/root.sunot.io.der && \
+            -o /usr/local/share/ca-certificates/custom/root.sunot.io.der && \
             openssl x509 -inform DER \
-              -in /usr/local/share/ca-certificates/custom/root.sunot.io.der \
-              -out /usr/local/share/ca-certificates/custom/root.sunot.io.crt && \
+            -in /usr/local/share/ca-certificates/custom/root.sunot.io.der \
+            -out /usr/local/share/ca-certificates/custom/root.sunot.io.crt && \
             echo "Downloading sub CA..." && \
             curl -fsSL 'http://pki.sunot.io/ejbca/publicweb/certificates/search.cgi?sHash=gSt8ztDa%2BJ6FRhd4RzBPgVG4BZc' \
-              -o /usr/local/share/ca-certificates/custom/sub.sunot.io.der && \
+            -o /usr/local/share/ca-certificates/custom/sub.sunot.io.der && \
             openssl x509 -inform DER \
-              -in /usr/local/share/ca-certificates/custom/sub.sunot.io.der \
-              -out /usr/local/share/ca-certificates/custom/sub.sunot.io.crt && \
+            -in /usr/local/share/ca-certificates/custom/sub.sunot.io.der \
+            -out /usr/local/share/ca-certificates/custom/sub.sunot.io.crt && \
             rm /usr/local/share/ca-certificates/custom/*.der && \
             update-ca-certificates && \
             echo "Importing into Java truststore..." && \
             for crt in /usr/local/share/ca-certificates/custom/*.crt; do \
-              aliasname=$(basename $crt .crt); \
-              echo "Importing $aliasname into Java truststore..."; \
-              keytool -importcert -trustcacerts -alias $aliasname \
-                -file $crt -keystore $JAVA_HOME/lib/security/cacerts \
-                -storepass changeit -noprompt; \
+            aliasname=$(basename $crt .crt); \
+            echo "Importing $aliasname into Java truststore..."; \
+            keytool -importcert -trustcacerts -alias $aliasname \
+            -file $crt -keystore $JAVA_HOME/lib/security/cacerts \
+            -storepass changeit -noprompt; \
             done
-        {{- include "xwiki.initContainersSecrets" . | nindent 8 }}
-      {{- if or .Values.initContainers.database.enabled .Values.initContainers.solr.enabled (and .Values.volumePermissions.enabled .Values.persistence.enabled) }}
-        {{- include "xwiki.initContainers" . | nindent 8 }}
-      {{- end }}
+      #   {{- include "xwiki.initContainersSecrets" . | nindent 8 }}
+      # {{- if or .Values.initContainers.database.enabled .Values.initContainers.solr.enabled (and .Values.volumePermissions.enabled .Values.persistence.enabled) }}
+      #   {{- include "xwiki.initContainers" . | nindent 8 }}
+      # {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: {{ include "xwiki.imageName" . }}
